ThreadPool class added. Terrain generation moved to background threads

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,8 @@ add_definitions(
     -DGLEW_NO_GLU
     -D_CRT_SECURE_NO_WARNINGS)
 
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
+
 # Engine library
 add_library(engine STATIC
             ${ENGINE_LIBRARY_SOURCE_FILES})
